<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">Unable to fetch movie data.  Please make sure you are connected to a network.</string>
    <string name="sort_default">popular</string>
    <string name="sortvalue_popular">popular</string>
    <string name="sortvalue_rating">top_rated</string>
    <string name="sortvalue_favorite">favorite</string>
    <string name="sort_popular">Sort by Popularity</string>
    <string name="sort_rating">Sort by Rating</string>

    <string name="title_activity_movie_detail">Movie Title </string>
    <string name="movie_poster_content_desc">Movie Poster</string>
    <string name="movie_trailer_thumbnail">Trailer Thumbnail</string>
    <string name="movie_title_placeholder">Movie Title not found</string>
    <string name="movie_date_placeholder">Release Date not found</string>
    <string name="movie_vote_placeholder">Rating not found</string>
    <string name="movie_overview_placeholder">Overview not found</string>
    <string name="noreviews">No reviews available.</string>
    <string name="notrailers">No trailers available.</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorites">Add to \nFavorites</string>
    <string name="remove_from_favorites">Remove from \nFavorites</string>
    <string name="show_only_favorites">Show Only Favorites</string>
    <string name="no_favorites_selected_yet">No Favorites Selected Yet</string>
</resources>
