<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="movie" type="com.example.android.popmovies1.data.Movie" />
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageview_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/twohundred"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_content_desc"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageview_favorite"
                android:layout_width="@dimen/fifty"
                android:layout_height="@dimen/fifty"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginEnd="@dimen/twentyeight"
                android:layout_marginRight="@dimen/twentyeight"
                android:contentDescription="@string/favorite"
                android:src="@drawable/heart"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/textview_movie_title"
                app:layout_constraintEnd_toEndOf="parent" />


            <ImageView
                android:id="@+id/imageview_movie_poster"
                android:layout_width="@dimen/onefifty"
                android:layout_height="@dimen/twohundrednine"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_marginTop="@dimen/twentyfive"
                android:contentDescription="@string/movie_poster_content_desc"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="@+id/textview_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyfour"
                android:layout_marginLeft="@dimen/twentyfour"
                android:layout_marginTop="@dimen/fourtyfour"
                android:text="@{movie.release_date, default=@string/movie_date_placeholder}"
                android:textAppearance="@style/Year"
                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyfour"
                android:layout_marginLeft="@dimen/twentyfour"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@{movie.vote, default=@string/movie_vote_placeholder}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />

            <Button
                android:id="@+id/button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twentyfour"
                android:layout_marginLeft="@dimen/twentyfour"
                android:layout_marginTop="@dimen/thirteen"
                android:text="@string/add_to_favorites"
                android:onClick="updateFavorite"
                app:layout_constraintTop_toBottomOf="@+id/textview_vote_average"
                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster" />


            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@{movie.overview, default=@string/movie_overview_placeholder}"
                app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster" />

            <View
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/two"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginBottom="@dimen/twenty"
                android:background="#000000"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/textview_overview" />

            <TextView
                android:id="@+id/textview_trailer_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewTrailers"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_trailer_header" />

            <TextView
                android:id="@+id/trailererror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:text="@string/notrailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/recycleViewTrailers"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/two"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:background="#000000"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/trailererror" />

            <TextView
                android:id="@+id/textview_review_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewReviews"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/ten"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_review_header" />

            <TextView
                android:id="@+id/reviewerror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:text="@string/noreviews"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/recycleViewReviews"/>


            <TextView
                android:id="@+id/textview_movie_title"
                android:layout_width="@dimen/threesevenfour"
                android:layout_height="@dimen/onefiveone"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginStart="@dimen/four"
                android:layout_marginEnd="@dimen/four"
                android:gravity="bottom|start"
                android:text="@{movie.title , default=@string/movie_title_placeholder}"
                android:textAppearance="@style/WhiteHeader"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_backdrop"
                app:layout_constraintStart_toStartOf="parent" />



        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>